# tact

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog.md  Doxyfile  INSTALL  INSTALL.md  NEWS.md  README  README.md
cmake/modules/: CodeCoverage.cmake
include/mewt/algorithm/: AbstractTopicModel.h  LDA.h  ParallelTopicModel.h  ParallelTopicModelWorker.h  RandomNumberGenerator.h
include/mewt/input/: Alphabet.h  FeatureVector.h  Instance.h  InstanceList.h  Pipe.h
include/mewt/input/corpus/: Corpus.h  Document.h  TextDocument.h
include/mewt/input/exceptions/: AlphabetSetException.h  CorpusNotFoundException.h  IncompatibleCorpusException.h  TermNotPresentException.h
include/mewt/input/instance/: FeatureVector.h
include/mewt/input/pipe/: DirectoryScannerPipe.h  FeatureMapPipe.h  InputPipe.h  LengthFilter.h  LowerCasePipe.h  Pipe.h  PunctuationFilter.h  StopwordFilter.h  XmlFilter.h
include/mewt/logger/: Logger.h
include/mewt/model/: Corpus.h  Document.h  ProbabilityMatrix.h  TopicModel.h
include/mewt/model/exceptions/: DuplicatedWordException.h  WordNotPresentException.h
include/mewt/output/: Assignment.h  Identifier.h  TopicAssignment.h
include/mewt/output/exceptions/: ElementNotPresentException.h
include/mewt/util/: Files.h  Strings.h
include/mewt/util/exceptions/: BadCastException.h  DuplicateException.h  Exception.h  FileNotFoundException.h  IllegalArgumentException.h  OutOfBoundsException.h
include/tact/algorithm/: LDA.h  RandomNumberGenerator.h
include/tact/input/corpus/: Corpus.h  Document.h
include/tact/input/exceptions/: CorpusNotFoundException.h  IncompatibleCorpusException.h  TermNotPresentException.h
include/tact/input/pipe/: DirectoryScannerPipe.h  FeatureMapPipe.h  InputPipe.h  LengthFilter.h  Pipe.h  (+4 more)
include/tact/logger/: Logger.h
include/tact/model/: ProbabilityMatrix.h  TopicModel.h
include/tact/output/: Identifier.h
include/tact/util/: Files.h  Strings.h
include/teflon/algorithm/: LDA.h  RandomNumberGenerator.h
include/teflon/logger/: Logger.h
include/teflon/model/: ProbabilityMatrix.h  TopicModel.h
include/teflon/output/: Identifier.h  TopicModelPrinter.h
include/teflon/util/: Files.h  Strings.h
include/tmte-cpp/algorithm/: AbstractTopicModel.h  ParallelTopicModel.h  ParallelTopicModelWorker.h  RandomNumberGenerator.h
include/tmte-cpp/input/: Alphabet.h  FeatureVector.h  Instance.h  InstanceList.h  Pipe.h
include/tmte-cpp/model/: AbstractTopicModel.h  Corpus.h  Document.h  TopicModel.h
include/tmte-cpp/output/: Assignment.h  Identifier.h  TopicAssignment.h
sample/00/: part.00  part.01  part.02  part.03  part.04  part.05  part.06  part.07  part.08  part.09  part.10  part.11  part.12  part.13  part.14  part.15  part.16  part.17  part.18  part.19  part.20  part.21  part.22  part.23  part.24  part.25  part.26  part.27  part.28  part.29  part.30  part.31  part.32  part.33  part.34  part.35  part.36  part.37  part.38  part.39  (+59 more)
sample/01/: part.00  part.01  part.02  part.03  part.04  part.05  part.06  part.07  part.08  part.09  part.10  part.11  part.12  part.13  part.14  part.15  part.16  part.17  part.18  part.19  part.20  part.21  part.22  part.23  part.24  part.25  part.26  part.27  part.28  part.29  part.30  part.31  part.32  part.33  part.34  part.35  part.36  part.37  part.38  part.39  (+59 more)
sample/02/: part.00  part.01  part.02  part.03  part.04  part.05  part.06  part.07  part.08  part.09  part.10  part.11  part.12  part.13  part.14  part.15  part.16  part.17  part.18  part.19  part.20  part.21  part.22  part.23  part.24  part.25  part.26  part.27  part.28  part.29  part.30  part.31  part.32  part.33  part.34  part.35  part.36  part.37  part.38  part.39  (+11 more)
scripts/: CreateClass.py  count_lines.sh  formatAll.sh  mock_class.py
src/: main.cpp
src/algorithm/: AbstractTopicModel.cpp  LDA.cpp  LatentDirichletAllocation.cpp  ParallelTopicModel.cpp  ParallelTopicModelWorker.cpp  RandomNumberGenerator.cpp
src/input/: Alphabet.cpp  FeatureVector.cpp  Instance.cpp  InstanceList.cpp  Pipe.cpp
src/input/corpus/: Corpus.cpp  Document.cpp  TextDocument.cpp
src/input/exceptions/: CorpusNotFoundException.cpp  IncompatibleCorpusException.cpp  TermNotPresentException.cpp
src/input/instance/: Document.cpp  FeatureVector.cpp
src/input/pipe/: DirectoryScannerPipe.cpp  FeatureMapPipe.cpp  InputPipe.cpp  LengthFilter.cpp  LowerCasePipe.cpp  Pipe.cpp  PunctuationFilter.cpp  StopwordFilter.cpp  XmlFilter.cpp
src/logger/: Logger.cpp
src/model/: AbstractTopicModel.cpp  Alphabet.cpp  Corpus.cpp  Document.cpp  ProbabilityMatrix.cpp  TopicModel.cpp
src/output/: Assignment.cpp  Identifier.cpp  TopicAssignment.cpp  TopicModelPrinter.cpp
src/util/: Files.cpp  Strings.cpp
src/util/exceptions/: BadCastException.cpp  DuplicateException.cpp  Exception.cpp  FileNotFoundException.cpp  IllegalArgumentException.cpp  OutOfBoundsException.cpp
test/algorithm/: LatentDirichletAllocationTest.cpp  ParallelTopicModelTest.cpp
test/input/: FeatureVectorTest.cpp  InstanceListTest.cpp  PipeTest.cpp
test/input/exceptions/: AlphabetSetExceptionTest.cpp
test/model/: AlphabetTest.cpp  CorpusTest.cpp  DocumentTest.cpp  TopicModelTest.cpp
test/model/exceptions/: DuplicatedWordExceptionTest.cpp  WordNotPresentExceptionTest.cpp
test/output/: IdentifierTest.cpp  TopicAssignmentTest.cpp
test/src/algorithm/: AbstractTopicModelTest.cpp  LDATest.cpp  ParallelTopicModelTest.cpp  ParallelTopicModelWorkerTest.cpp  RandomNumberGeneratorTest.cpp
test/src/input/: AlphabetTest.cpp  FeatureVectorTest.cpp  InstanceListTest.cpp  InstanceTest.cpp  PipeTest.cpp
test/src/integration/: IntegrationTests.cpp
test/src/logger/: LoggerTest.cpp
test/src/model/: AbstractTopicModelTest.cpp  AlphabetTest.cpp  CorpusTest.cpp  DocumentTest.cpp  ProbabilityMatrixTest.cpp  TopicModelTest.cpp
test/src/output/: AssignmentTest.cpp  IdentifierTest.cpp  TopicAssignmentTest.cpp  TopicModelPrinterTest.cpp
test/src/util/: FilesTest.cpp  StringsTest.cpp
test/util/exceptions/: ExceptionTest.cpp  IllegalArgumentExceptionTest.cpp  OutOfBoundsExceptionTest.cpp
(+167 files in other folders)
